mType/tests/testFiles/import/error/modules/CollisionModule1.mt
class Collision {
    fun getSource(): String {
        return "Module1";
    }
}
